tests/errors/type2.ramen
SELECT COALESCE(1, NULL) AS x;
